--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
 		"module"
 	],
 	"dependencies": {
-		"yeoman-generator": "^2.0.3"
+		"yeoman-generator": "^2.0.3",
+		"humanize-url": "^1.0.1",
+		"normalize-url": "^2.0.1",
+		"superb": "^2.0.0",
+		"underscore.string": "^3.3.4"
 	},
 	"xo": {
 		"esnext": true,
@@ -31,10 +35,6 @@
 		}
 	},
 	"devDependencies": {
-		"humanize-url": "^1.0.1",
-		"normalize-url": "^2.0.1",
-		"superb": "^2.0.0",
-		"underscore.string": "^3.3.4",
 		"xo": "^0.20.3"
 	}
 }
